# spykertym-installer

./: .zshrc  README.md  index.html  manual_patch.py  package-lock.json  package.json  vite.config.js
src/: App.vue  global.scss  main.js  styles.css
src-tauri/: .gitignore  2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Game.vue  Menu.vue  Popup.vue  Titlebar.vue  UpdateCheck.vue
src/components/helpers/: cmpVersion.ts
src/components/store/: CurrentGame.js  MenuWidth.js
