[package]
name = "spykertym-installer"
description = "Instalátor Spyker Týmu"
version = "1.0.0"
authors = ["Spyker Tým"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "window-unminimize",
    "window-unmaximize",
    "window-start-dragging",
    "window-minimize",
    "window-hide",
    "window-show",
    "window-maximize",
    "window-close",
    "dialog-message",
    "path-all",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52.0"
winapi = { version = "0.3.9", features = ["winver"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
zip = "1.3.0"
md5 = "0.7.0"
dotenv_codegen = "0.15.0"
sha2 = "0.10.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
