[package]
name = "spykertym-installer"
description = "Instalátor Spyker Týmu"
version = "1.0.5"
authors = ["Spyker Tým"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
winreg = "^0.55"
winapi = { version = "^0.3", features = ["winver"] }
reqwest = { version = "^0.12.14", features = ["json", "stream"] }
zip = "^2"
md5 = "^0.7"
dotenv_codegen = "0.15.0"
sha2 = "0.10.8"
tauri-plugin-shell = "^2"
tauri-plugin-dialog = "^2"
futures-util = "0.3.31"
futures = "0.3.31"
tauri-plugin-opener = "2"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
